v2.0.0/class/GroundOverlay/README.md
:warning: **This documentions are aim for older versions (from 2.0.0 to 2.2.9).
New documetations are https://github.com/mapsplugin/cordova-plugin-googlemaps-doc/blob/master/v2.3.0/class/GroundOverlay/README.md**

---------------
# GroundOverlay class

## Create

<table>
    <tr>
        <th><a href="./addGroundOverlay/README.md">map.addGroundOverlay()</a></th>
        <td>Add a ground overlay.</td>
    </tr>
</table>

## Methods

<table>
    <tr>
        <th><a href="./setBounds/README.md">setBounds()</a></th>
        <td>Change the bounds of the GroundOverlay.</td>
    </tr>
    <tr>
        <th>getBounds()</th>
        <td>Return the current center position.</td>
    </tr>
    <tr>
        <th><a href="./setBearing/README.md">setBearing()</a></th>
        <td>Change the bearing of the ground overlay.</td>
    </tr>
    <tr>
        <th>getBearing()</th>
        <td>Return the current bearing value.</td>
    </tr>
    <tr>
        <th><a href="./setImage/README.md">setImage()</a></th>
        <td>Change the image of the ground overlay</td>
    </tr>
    <tr>
        <th><a href="./setOpacity/README.md">setOpacity()</a></th>
        <td>Change the opacity of the ground overlay</td>
    </tr>
    <tr>
        <th>getOpacity()</th>
        <td>Return the current opacity.</td>
    </tr>
    <tr>
        <th><a href="./setClickable/README.md">setClickable()</a></th>
        <td>Change click-ability of the ground overlay.</td>
    </tr>
    <tr>
        <th>getClickable()</th>
        <td>Return true if the ground overlay is clickable.</td>
    </tr>
    <tr>
        <th><a href="./setVisible/README.md">setVisible()</a></th>
        <td>Change visibility of the ground overlay.</td>
    </tr>
    <tr>
        <th>getVisible()</th>
        <td>Return true if the ground overlay is visible.</td>
    </tr>
    <tr>
        <th><a href="./setZIndex/README.md">setZIndex()</a></th>
        <td>Change the ground overlay zIndex order.</td>
    </tr>
    <tr>
        <th>getZIndex()</th>
        <td>Return the current ground overlay zIndex.</td>
    </tr>
    <tr>
        <th><a href="./remove/README.md">remove()</a></th>
        <td>Remove the ground overlay.</td>
    </tr>
</table>

## Events
<table>
    <tr>
        <th><a href="./GROUND_OVERLAY_CLICK/README.md">GROUND_OVERLAY_CLICK</a></th>
        <td>Arguments:  <a href="../LatLng/README.md">LatLng</a><br>This event is fired when you click on a ground overlay.</td>
    </tr>
</table>
